test/expressions/loop-expr/incorrectlyReturnByRef.good
incorrectlyReturnByRef.chpl:3: error: unable to resolve return type
